[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "1"
path = "src/1/main.rs"
test = false
bench = false

[[bin]]
name = "3"
path = "src/3/main.rs"
test = false
bench = false